# copyclip-v1

./: PHASE_1_IMPLEMENTATION.md  PHASE_1_IMPLEMENTATION_STATUS.md  PHASE_2_IMPLEMENTATION_PLAN.md  PHASE_2_IMPLEMENTATION_STATUS.md  README.md  YINVIM_ROADMAP.md  index.html  package.json  tsconfig.json  vite.config.ts
docs/: CROSS_PLATFORM_SUPPORT.md  GAMEPAD_CONTROL_ARCHITECTURE.md  GAMEPAD_SYSTEM.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  controller.rs  db.rs  gamepad.rs  gamepad_manager.rs  lib.rs  main.rs  scroll.rs
src-tauri/src/actions/: app.rs  executor.rs  keyboard.rs  keyboard_old.rs  mod.rs  mouse.rs  mouse_old.rs  system.rs
src-tauri/src/models/: mod.rs
src-tauri/src/modes/: hotkey.rs  manager.rs  mod.rs  motion.rs  normal.rs
src-tauri/src/types/: action.rs  binding.rs  mod.rs  mode.rs
src/components/: ControllerConfig.tsx  EmojiView.tsx  GamepadConfig.tsx  GamepadDiagnostics.tsx  GamepadSettingsPanel.tsx  KeybindingEditor.tsx  ModeIndicator.tsx  Navigation.tsx  ProfileManager.tsx  TitleBar.tsx
src/contexts/: ClipboardContext.tsx  clipboard-context.tsx  gamepad-context.tsx
src/hooks/: clipboardReducer.ts  gamepadReducer.ts  useClipboard.ts  useClipboardMonitor.ts  useGamepad.ts  useGamepadMonitor.ts  useLoadClipboardHistory.ts
src/pages/: Home.tsx  emoji.tsx  settings.tsx  snippets.tsx  statistics.tsx  tasks.tsx
src/services/: databaseService.ts
src/types/: clipboard.ts  clipboard.types.ts  gamepad.types.ts
(+3 files in other folders)
